refactor css modules

--- a/src/components/button/index.module.scss
+++ b/src/components/button/index.module.scss
@@ -12,7 +12,7 @@
         background-color: $primary-color-hower;
     }
 
-    &#{$this}__disabled {
+    &#{$this}Disabled {
         color: rgba($disabled-font-color, .3);
         background-color: $disabled-color;
 
