refactor: button component

--- a/src/components/button/styles.module.scss
+++ b/src/components/button/styles.module.scss
@@ -12,7 +12,7 @@
 		background-color: $primary-color-hower;
 	}
 
-	&#{$this}Disabled {
+	&#{$this}-disabled {
 		color: rgba($disabled-font-color, 0.3);
 		background-color: $disabled-color;
 
