--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,8 +1,8 @@
 $primary-color: #6b99c3;
-$primary-color-hower: #16354d;
+$primary-color-hover: #16354d;
 
 $disabled-color: #e4e5ea;
-$disabled-color-hower: #d2d2d4;
+$disabled-color-hover: #d2d2d4;
 $disabled-font-color: #0c151c;
 
 $font-color: #fff;
