fix: add margin bottom

--- a/src/components/checkBox/styles.module.scss
+++ b/src/components/checkBox/styles.module.scss
@@ -2,6 +2,11 @@
 	position: relative;
 	display: inline-flex;
 	align-items: center;
+	margin-bottom: 10px;
+
+	&:last-child {
+		margin-bottom: 0;
+	}
 
 	&:hover {
 		svg {
