--- a/src/components/dropDown/styles.module.scss
+++ b/src/components/dropDown/styles.module.scss
@@ -18,11 +18,5 @@ $transition: all 0.2s;
 }
 
 .Dropdown {
-	padding: 10px 20px;
-	height: max-content;
-	width: max-content;
-	background-color: white;
-	border: 1px solid rgba($color: #000000, $alpha: 0.1);
-	border-radius: 5px;
-	z-index: 100;
+	width: 100%;
 }
